@@ -1616,8 +1616,20 @@ int CBeamAssessor::CalibrateElectronDose(BOOL interactive)
 void CBeamAssessor::CalibrateBeamShift()
 {
   int i;
+  CString str;
   for (i = 0; i < 6; i++)
     mBSCshiftX[i] = mBSCshiftY[i] = 0.;
+  i = mScope->GetMagIndex();
+  if (FEIscope && i >= mScope->GetLowestMModeMagInd(true) &&
+    i < mScope->GetLowestMModeMagInd(false)) {
+    i = mScope->GetLowestMModeMagInd(true) - 1;
+    str.Format("A calibration at this mag will not be handled correctly\n"
+      "because of the mismatch in mag indexes between TEM and EFTEM.\n\n"
+      "Drop the mag to %d in TEM (or %d in EFTEM) to do a calibration for LM", 
+      MagOrEFTEMmag(false, i), MagOrEFTEMmag(true, i));
+    AfxMessageBox(str, MB_EXCLAME);
+    return;
+  }
 
   CString *modeNames = mWinApp->GetModeNames();
   if (AfxMessageBox("Beam shift calibration takes pictures with the " 
@@ -1629,7 +1641,6 @@ void CBeamAssessor::CalibrateBeamShift()
     "Are you ready to proceed?", MB_ICONQUESTION | MB_YESNO) == IDNO)
     return;
     
-
   mScope->GetBeamShift(mBaseShiftX, mBaseShiftY);
   mShiftCalIndex = 0;
   mCamera->InitiateCapture(SHIFT_CAL_CONSET);
